Added flsite.py and templates

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 pytest = "*"
 black = "*"
 psycopg2-binary = "*"
+pytest-cov = "*"
+pytest-html = "*"
+flask = "*"
 
 [dev-packages]
 
